# etd

./: .gitignore  CLAUDE.md  README.md  environment.yaml  justfile  pyproject.toml
docs/: ALGORITHM.md  ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md  ROADMAP.md  SCRIPTS.md  STYLE.md
experiments/: __init__.py  _display.py  _parallel.py  datasets.py  nuts.py  run.py  show.py  tune.py
experiments/configs/: banana_2d.yaml  blr_gergman.yaml  blr_german.yaml  blr_ionosphere.yaml  blr_ionosphere_chol.yaml  blr_ionosphere_inf.yaml  blr_ionosphere_precond.yaml  blr_ionosphere_rms.yaml  blr_mutation.yaml  blr_sonar.yaml  funnel_10d.yaml  gmm_10d_5.yaml  gmm_20d_5.yaml  gmm_2d_4.yaml  gmm_2d_8.yaml  logistic_german.yaml  template.yaml
experiments/configs/banana/: 2d.yaml
experiments/configs/blr/: german.yaml  ionosphere.yaml  (+5 more)
figures/: style.py
notebooks/: banana_results.ipynb  blr_results.ipynb  funnel_results.ipynb  gmm_hd_results.ipynb  gmm_results.ipynb
scripts/: dv_seed_analysis.py  visual_sanity.py  visualize_gmm.py
src/etd/: __init__.py  schedule.py  step.py  types.py  weights.py
tests/: conftest.py  test_barycentric.py  test_baselines.py  test_cholesky_precond.py  test_cost_variants.py  test_datasets.py  test_diagnostics.py  test_etd_gaussian.py  test_langevin_cost.py  test_mala.py  test_mutation.py  test_mutation_integration.py  test_nuts.py  test_parallel.py  test_phase4_gate.py  test_primitives.py  test_runner.py  test_schedules.py  test_sdd.py  test_sinkhorn.py  test_targets_banana.py  test_targets_blr.py  test_targets_funnel.py  test_targets_logistic.py
(+40 files in other folders)
