[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etd"
version = "0.1.0"
description = "Entropic Transport Descent for variational inference"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Vincent Pacelli" }]

dependencies = [
    "jax[cpu]>=0.4.20",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "rich",
    "tqdm",
    "numpyro>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "chex",
    "ipython",
    "ruff",
]
data = [
    "duckdb",
    "pandas",
    "seaborn",
    "corner",
    "pybaseball",
    "yfinance",
]
tune = [
    "optuna",
]
all = [
    "etd[dev,data,tune]",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"

# ---------- ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E741", # ambiguous variable names (N, M, d are fine)
]

[tool.ruff.lint.isort]
known-first-party = ["etd"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
